# Physical-Access-Control-System

./: .gitignore  README.md  REPORT.md  server.cpp  server.h
CA1/CPSMonitoringSystemGUI/: CMakeLists.txt  bidirectionalconnection.cpp  bidirectionalconnection.h  cpsapplication.cpp  cpsapplication.h  httpresponse.cpp  httpresponse.h
CA1/CloudWebServer/: CMakeLists.txt  server.cpp  server.h  socketserver.cpp  socketserver.h  users.json
CA1/Proteus/: CA1.pdsprj
CA1/Proteus/sketch_apr23a/: sketch_apr23a.ino
CPSMonitoringSystemGUI/: CMakeLists.txt  CPSMonitoringSystemGUI.pro  bidirectionalconnection.cpp  bidirectionalconnection.h  cpsapplication.cpp  cpsapplication.h  cpsbutton.cpp  cpsbutton.h  cpshistorywindow.cpp  cpslabel.cpp  cpslabel.h  cpsmainwindow.cpp  cpstextfield.cpp  cpstextfield.h  httprequest.cpp  httprequest.h  icon.rc  main.cpp
CloudWebServer/: CMakeLists.txt  main.cpp  rfids.json  server.cpp  server.h  socketserver.cpp  socketserver.h  users.json
